# token-slayer

./: .claudeignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  README.tr.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
src/cca/: cli.py  config_gen.py  dead_code.py  diff_context.py  focus.py  graph.py  health.py  mcp_server.py  parser.py  reporter.py  session_monitor.py  slim.py  snapshot.py  token_counter.py
src/cca/proxy/: __init__.py  cost_tracker.py  failover.py  orchestrator.py  prompt_chunker.py  redis_cache.py  router.py  semantic_cache.py  server.py
tests/: conftest.py  test_cache.py  test_cli.py  test_diff_context.py  test_estimate_cli.py  test_focus.py  test_parser.py  test_slim.py  test_snapshot.py  test_token_counter.py
tests/proxy/: test_cost_tracker.py  test_orchestrator.py  test_prompt_chunker.py  test_router.py  test_semantic_cache.py
