[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-slayer"
version = "0.1.0"
description = "Slash your Claude token usage. Analyze Python projects, generate .claudeignore and CLAUDE.md."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tiktoken>=0.7",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "gitpython>=3.1",
    "networkx>=3.3",
]

[project.scripts]
tslayer = "cca.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
mcp = [
    "mcp[cli]>=1.0",
]
all = [
    "token-slayer[mcp]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
